# proxy-FUn

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENCE.md  LICENCE_fr.md  README.md
cmake/: ADIOS2Config.cmake  CheckOptions.cmake  CompilerConfig.cmake  GoogleBenchConfig.cmake  GoogleBenchUtils.cmake  GoogleTestConfig.cmake  GoogleTestUtils.cmake  KokkosConfig.cmake  KokkosUtils.cmake  ProxyConfig.cmake  ProxyUtils.cmake  PywrapConfig.cmake  PywrapUtils.cmake
scripts/: adios_cartesian_snap_viz.py  adios_single_receiver_viz.py
src/: CMakeLists.txt
src/discretization/: CMakeLists.txt
src/discretization/fd/: CMakeLists.txt
src/discretization/fd/abckernels/include/: fd_abckernels.h
src/discretization/fd/kernels/include/: fd_kernels.h  fd_macros.h
src/discretization/fd/stencils/include/: fd_stencils.h
src/discretization/fe/: Integrals.hpp
src/discretization/fe/SEMKernels/: CMakeLists.txt
src/discretization/fe/SEMKernels/src/: CMakeLists.txt
src/discretization/fe/SEMKernels/src/common/: macros.hpp  mathUtilites.hpp
src/discretization/fe/SEMKernels/src/finiteElement/: CMakeLists.txt
src/discretization/fe/SEMKernels/src/finiteElement/makutu/: LagrangeBasis1.hpp  LagrangeBasis2.hpp  LagrangeBasis3GL.hpp  LagrangeBasis4GL.hpp  LagrangeBasis5GL.hpp  Qk_Hexahedron_Lagrange_GaussLobatto.hpp  tensorops.hpp
src/discretization/fe/SEMKernels/src/finiteElement/unitTests/: CMakeLists.txt  testSEMQkGLIntegrals.cpp
src/main/: CMakeLists.txt
src/main/fd/: CMakeLists.txt
src/main/fd/include/: fd_io.h  fd_options.h  fd_proxy.h
src/main/fd/src/: fd_proxy.cc  main.cc
src/main/fe/: CMakeLists.txt
src/main/fe/include/: sem_io_controller.h  sem_proxy.h  sem_proxy_options.h
src/main/fe/src/: main.cc  sem_proxy.cc
src/model/: CMakeLists.txt
src/model/grid/: CMakeLists.txt
src/model/grid/include/: fd_boundary.h  fd_grid_geometry.h  fd_grids.h  fd_model_io.h  fd_velocity_model.h
src/model/mesh/: CMakeLists.txt
src/model/mesh/api/: CMakeLists.txt
src/model/mesh/api/include/: builder.h  model.h
src/model/mesh/impl/: CMakeLists.txt
src/model/mesh/impl/builder/: CMakeLists.txt
src/model/mesh/impl/builder/cartesian/: CMakeLists.txt
src/model/mesh/impl/builder/cartesian/include/: cartesian_params.h  cartesian_unstruct_builder.h
src/model/mesh/impl/builder/cartesian/src/: cartesian_unstruct_builder.cc
src/model/mesh/impl/model/: CMakeLists.txt
src/model/mesh/impl/model/unstruct/: CMakeLists.txt
src/model/mesh/impl/model/unstruct/include/: model_unstruct.h
src/model/mesh/impl/model/unstruct/src/: model_unstruct.cc
src/model/mesh/pywrap/: CMakeLists.txt
src/model/mesh/pywrap/include/: bindings_builder.h  bindings_model.h  bindings_utils.h
src/model/mesh/pywrap/src/: bindings.cpp
src/solver/: CMakeLists.txt
src/solver/fd/: CMakeLists.txt
src/solver/fd/include/: fd_solver.h  fd_source_receivers.h
src/solver/fd/src/: fd_solver.cc
src/solver/fe/: CMakeLists.txt
src/solver/fe/api/: CMakeLists.txt
src/solver/fe/api/include/: sem_solver_acoustic.h  sem_solver_base.h  sem_solver_elastic.h  solver_base.h
src/solver/fe/impl/: CMakeLists.txt
src/solver/fe/impl/include/: sem_solver_acoustic_impl.h  sem_solver_elastic_impl.h  solver_factory.h
src/solver/fe/impl/src/: solver_factory.cc
src/solver/fe/impl/src/makutu/: CMakeLists.txt
src/solver/fe/impl/src/makutu/templates/: makutu_solver_template_acoustic.cpp.in  makutu_solver_template_elastic.cpp.in
src/solver/fe/pywrap/: CMakeLists.txt
src/solver/fe/pywrap/src/: bindings.cpp
src/utils/: CMakeLists.txt
src/utils/include/: args_parse.h  common_config.h.in  common_macros.h  data_type.h  sem_macros.h  source_and_receiver_utils.h  utils.h
tests/: CMakeLists.txt  conftest.py
tests/benchmarks/baselines/cpu/amd-epyc-9534_96/gcc_12.2.1/: README.md
tests/benchmarks/baselines/cpu/amd-epyc-9534_96/gcc_12.2.1/cpp/: solver_fe_cartesian_struct_t1.json  solver_fe_cartesian_struct_t16.json  solver_fe_cartesian_struct_t2.json  solver_fe_cartesian_struct_t32.json  solver_fe_cartesian_struct_t4.json  solver_fe_cartesian_struct_t64.json  solver_fe_cartesian_struct_t8.json  solver_fe_cartesian_unstruct_t1.json  solver_fe_cartesian_unstruct_t16.json  solver_fe_cartesian_unstruct_t2.json  solver_fe_cartesian_unstruct_t32.json  solver_fe_cartesian_unstruct_t4.json  solver_fe_cartesian_unstruct_t64.json  solver_fe_cartesian_unstruct_t8.json
tests/benchmarks/baselines/cpu/amd-epyc-9534_96/gcc_12.2.1/python/: solver_fe_cartesian_t1.json  solver_fe_cartesian_t16.json  solver_fe_cartesian_t2.json  solver_fe_cartesian_t32.json  solver_fe_cartesian_t4.json  solver_fe_cartesian_t64.json  solver_fe_cartesian_t8.json
tests/benchmarks/cpp/: CMakeLists.txt
tests/benchmarks/cpp/include/: bench_macros.h  bench_main.h
tests/benchmarks/cpp/src/: bench_solver_fe_cartesian_unstruct_acoustic.cc  bench_solver_fe_cartesian_unstruct_elastic.cc
tests/benchmarks/python/: benchmark_groups.py  data_structures.py  solver_utils.py  test_bench_solver_fe_cartesian_struct_acoustic.py  test_bench_solver_fe_cartesian_struct_elastic.py  test_bench_solver_fe_cartesian_unstruct_acoustic.py  test_bench_solver_fe_cartesian_unstruct_elastic.py
tests/units/: CMakeLists.txt  main.cpp
tests/units/model/pywrap/: test_cartesian_struct_builder.py  test_cartesian_unstruct_builder.py  test_model_smoke.py  test_model_unstruct.py
tests/units/solver/pywrap/: solver_utils.py  test_solver_smoke.py  test_solver_struct.py  test_solver_unstruct.py
tests/units/utils/: CMakeLists.txt  test_common_macros_find_max_1d.cc
